--- a/presence-monitor/.README.j2
+++ b/presence-monitor/.README.j2
@@ -63,4 +63,4 @@ If you are more interested in stable releases of our add-ons:
 [project-stage-shield]: https://img.shields.io/badge/project%20stage-beta-yellow.svg
 <!-- [project-stage-shield]: https://img.shields.io/badge/project%20stage-production%20ready-brightgreen.svg -->
 [releases-shield]: https://img.shields.io/github/release/Limych/addon-presence-monitor.svg
-[releases]: https://github.com/Limych/addon-presence-monitor/releases
+[releases]: https://img.shields.io/github/tag-date/Limych/addon-presence-monitor?label=release
