--- a/presence-monitor/.README.j2
+++ b/presence-monitor/.README.j2
@@ -1,8 +1,8 @@
 # Bluetooth Presence Monitor
 
-[![GitHub Release][releases-shield]][releases]
+[![GitHub Release][release-shield]][release]
 ![Project Stage][project-stage-shield]
-![Project Maintenance](https://img.shields.io/badge/maintainer-Andrey%20Khrolenok%20%40Limych-blue.svg?style=popout)
+![Project Maintenance](https://img.shields.io/badge/maintainer-Andrey%20Khrolenok%20%40Limych-blue.svg)
 
 [![GitHub pull requests](https://img.shields.io/github/issues-pr/Limych/addon-presence-monitor?style=popout)](https://github.com/Limych/addon-presence-monitor/pulls)
 [![Bugs](https://img.shields.io/github/issues/Limych/addon-presence-monitor/bug.svg?colorB=red&label=bugs&style=popout)](https://github.com/Limych/addon-presence-monitor/issues?q=is%3Aopen+is%3Aissue+label%3Abug)
@@ -59,8 +59,8 @@ If you are more interested in stable releases of our add-ons:
 
 {% endif %}
 
-[docs]: https://github.com/Limych/addon-presence-monitor/blob/master/README.md
+[docs]: https://github.com/Limych/addon-presence-monitor/blob/{{ commit }}/README.md
 [project-stage-shield]: https://img.shields.io/badge/project%20stage-beta-yellow.svg
 <!-- [project-stage-shield]: https://img.shields.io/badge/project%20stage-production%20ready-brightgreen.svg -->
-[releases-shield]: https://img.shields.io/github/release/Limych/addon-presence-monitor.svg
-[releases]: https://img.shields.io/badge/version-{{ version }}-blue.svg
+[release-shield]: https://img.shields.io/badge/version-{{ version }}-blue.svg
+[release]: https://github.com/Limych/addon-presence-monitor/blob/{{ commit }}
