--- a/presence-monitor/.README.j2
+++ b/presence-monitor/.README.j2
@@ -9,27 +9,16 @@
 
 Passive Bluetooth presence detection of beacons, cell phones, and other Bluetooth devices.
 
-## About
-
-This add-on actually is a usage convenient shell for launching [the Andrew J Freyer's monitor script](https://github.com/andrewjfreyer/monitor) on the same machine where the Home Assistant itself works.
-This script useful for MQTT-based home automation, especially when the script runs on multiple devices, distributed throughout a property.
-
-You can combine add-on and common versions of this presence monitor script in any combinations.
-
-[Click here for the full documentation][docs]
-
-
 {% if channel == "edge" %}
 ## WARNING! THIS IS AN EDGE VERSION!
 
-This Hass.io Add-ons repository contains edge builds of add-ons. Edge builds
-add-ons are based upon the latest development version.
+Edge builds add-ons are based upon the latest development version.
 
-- They may not work at all.
-- They might stop working at any time.
-- They could have a negative impact on your system.
+- It may not work at all.
+- It might stop working at any time.
+- It could have a negative impact on your system.
 
-This repository was created for:
+This release was created for:
 
 - Anybody willing to test.
 - Anybody interested in trying out upcoming add-ons or add-on features.
@@ -43,12 +32,12 @@ If you are more interested in stable releases of our add-ons:
 {% if channel == "beta" %}
 ## WARNING! THIS IS A BETA VERSION!
 
-This Hass.io Add-ons repository contains beta releases of add-ons.
+This is release of add-on for beta-testers.
 
-- They might stop working at any time.
-- They could have a negative impact on your system.
+- It might stop working at any time.
+- It could have a negative impact on your system.
 
-This repository was created for:
+This release was created for:
 
 - Anybody willing to test.
 - Anybody interested in trying out upcoming add-ons or add-on features.
@@ -59,8 +48,18 @@ If you are more interested in stable releases of our add-ons:
 
 {% endif %}
 
-[docs]: https://github.com/Limych/addon-presence-monitor/blob/{{ commit }}/README.md
+## About
+
+This add-on actually is a usage convenient shell for launching [the Andrew J Freyer's monitor script](https://github.com/andrewjfreyer/monitor) on the same machine where the Home Assistant itself works.
+This script useful for MQTT-based home automation, especially when the script runs on multiple devices, distributed throughout a property.
+
+You can combine add-on and common versions of this presence monitor script in any combinations.
+
+[Click here for the full documentation][docs]
+
+
+[docs]: https://github.com/Limych/addon-presence-monitor/blob/{{ version }}/README.md
 [project-stage-shield]: https://img.shields.io/badge/project%20stage-beta-yellow.svg
 <!-- [project-stage-shield]: https://img.shields.io/badge/project%20stage-production%20ready-brightgreen.svg -->
 [release-shield]: https://img.shields.io/badge/version-{{ version }}-blue.svg
-[release]: https://github.com/Limych/addon-presence-monitor/tree/{{ commit }}
+[release]: https://github.com/Limych/addon-presence-monitor/tree/{{ version }}
