--- a/presence-monitor/.README.j2
+++ b/presence-monitor/.README.j2
@@ -24,9 +24,7 @@ This release was created for:
 - Anybody interested in trying out upcoming add-ons or add-on features.
 - Developers.
 
-If you are more interested in stable releases of our add-ons:
-
-<https://github.com/Limych/hassio-addons>
+For common purposes please install stable release of add-on.
 
 {% endif %}
 {% if channel == "beta" %}
@@ -42,9 +40,7 @@ This release was created for:
 - Anybody willing to test.
 - Anybody interested in trying out upcoming add-ons or add-on features.
 
-If you are more interested in stable releases of our add-ons:
-
-<https://github.com/Limych/hassio-addons>
+For common purposes please install stable release of add-on.
 
 {% endif %}
 
