--- a/presence-monitor/.README.j2
+++ b/presence-monitor/.README.j2
@@ -55,7 +55,6 @@ You can combine add-on and common versions of this presence monitor script in an
 
 
 [docs]: https://github.com/Limych/addon-presence-monitor/blob/{{ version }}/README.md
-[project-stage-shield]: https://img.shields.io/badge/project%20stage-beta-yellow.svg
-<!-- [project-stage-shield]: https://img.shields.io/badge/project%20stage-production%20ready-brightgreen.svg -->
+[project-stage-shield]: https://img.shields.io/badge/project%20stage-production%20ready-brightgreen.svg
 [release-shield]: https://img.shields.io/badge/version-{{ version }}-blue.svg
 [release]: https://github.com/Limych/addon-presence-monitor/tree/{{ version }}
