--- a/presence-monitor/.README.j2
+++ b/presence-monitor/.README.j2
@@ -49,7 +49,14 @@ For common purposes please install stable release of add-on.
 This add-on actually is a usage convenient shell for launching [the Andrew J Freyer's monitor script](https://github.com/andrewjfreyer/monitor) on the same machine where the Home Assistant itself works.
 This script useful for MQTT-based home automation, especially when the script runs on multiple devices, distributed throughout a property.
 
-You can combine add-on and common versions of this presence monitor script in any combinations.
+## Features
+
+* Convenient way to start indoor presence detection.
+* You can use Home Assistant configuration secrets in add-on configuration.
+* All necessary software is installed by itself. And regularly updated to the latest versions.
+* The script is almost configured — just enter a couple of remaining settings.
+* Complete freedom in reconfiguring the script to your needs.
+* You can combine add-on and common versions of this presence monitor script in any combinations.
 
 <p align="center">* * *</p>
 I put a lot of work into making this repo and component available and updated to inspire and help others! I will be glad to receive thanks from you — it will give me new strength and add enthusiasm:
