--- a/presence-monitor/.README.j2
+++ b/presence-monitor/.README.j2
@@ -67,10 +67,10 @@ I put a lot of work into making this repo and component available and updated to
 16yfCfz9dZ8y8yuSwBFVfiAa3CNYdMh7Ts</a>
 </p>
 
-[Click here for the full documentation][docs]
+[:books: Read the full add-on documentation][docs]
 
 
-[docs]: https://github.com/Limych/addon-presence-monitor/blob/{{ version }}/README.md
+[docs]: https://github.com/Limych/addon-presence-monitor/blob/{{ version }}/presence-monitor/DOCS.md
 [project-stage-shield]: https://img.shields.io/badge/project%20stage-production%20ready-brightgreen.svg
 [release-shield]: https://img.shields.io/badge/version-{{ version }}-blue.svg
 [release]: https://github.com/Limych/addon-presence-monitor/tree/{{ version }}
